# enkai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXES_APPLIED.md  README.md  REVIEW_SUMMARY.md  install.sh  test-enkai.sh  test-murasaki_rs.sh
.claude/agents/: architect.md  backend-dev.md  frontend-dev.md  qa.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION.md  TESTING.md
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/domain/: conflict.rs  git_operation.rs  mod.rs  resolution.rs
src/git/: applier.rs  commands.rs  detector.rs  mod.rs  parser.rs  status.rs
src/tui/: app.rs  colors.rs  event.rs  mod.rs  status_view.rs  syntax.rs
src/tui/views/: conflict_view.rs  file_list.rs  mod.rs  rebase_actions.rs  split_pane.rs
src/version/: checker.rs  mod.rs  semver.rs
