[package]
name = "murasaki_rs"
version = "0.1.0"
edition = "2021"
authors = ["Igor Vieira"]
description = "A TUI tool for handling git conflicts during merge or rebase"
license = "MIT"

[[bin]]
name = "saki"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
git2 = "0.18"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
syntect = "5.2"

[dev-dependencies]
tempfile = "3.8"
